# rampifier

./: .gitignore  Cargo.toml  README.md
plate-rampifier/: Cargo.toml  README.md  default_colors.brs
plate-rampifier/src/: main.rs
rampifier/: Cargo.toml  README.md
rampifier/src/: lib.rs
src/: main-working.rs  main.rs  main_vox_reader.rs  rampify.rs
terrain-gen-example/: Cargo.toml
terrain-gen-example/src/: consts.rs  main.rs
