[package]
name = "br-ramp-terrain"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = "0.1"
noise = "0.7.0"
vox-format = "0.1.0"